--- a/source/includes/_footer.erb
+++ b/source/includes/_footer.erb
@@ -77,7 +77,7 @@
 <div class="base__footer">
   <div class="corner-ribbon-bounds corner-ribbon-bounds--loose">
     <a class="corner-ribbon corner-ribbon--moko" target="_blank" href="https://www.tradegecko.com/jobs">
-      Were Hiring
+      We're Hiring
     </a>
   </div>
   <div class="footer-wrapper">
