Removed reference to dedicated support

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -30,8 +30,8 @@ secondary_cards:
     blurb: TradeGecko’s thorough use cases provide step-by-step instructions to build integrations quickly and easily.
     url: /docs.html#guides
     cta: Explore guides
-  - name: Dedicated Support
-    blurb: Get dedicated developer support through our forum or by contacting our support team.
+  - name: Knowledge and Support
+    blurb: Detailed articles and getting started modules covering all areas of the TradeGecko product.
     url: https://support.tradegecko.com
     cta: Learn more
 
