--- a/source/includes/_create_request.md.erb
+++ b/source/includes/_create_request.md.erb
@@ -25,9 +25,7 @@ https://api.tradegecko.com/<%= resource.resource_path || resource.resource_plura
 ```
 
 ```json
-{
-  "<%= resource.resource_name %>": <%= json_single %>
-}
+<%= JSON.pretty_generate(Hash[resource.resource_name, json_single]) %>
 ```
 
 Creates a new <%= resource.resource_name %> object.
