--- a/source/includes/_resource.md.erb
+++ b/source/includes/_resource.md.erb
@@ -1,7 +1,4 @@
-<% json = t(".json", scope: resource)
-  json_all = JSON.pretty_generate(json)
-  json_single = JSON.pretty_generate(json.first)
-%>
+<% json = t(".json", scope: resource) %>
 # <%= t(".resource_klass", scope: resource) %>
 <% unless t(".parent", scope: resource).to_s.include?("missing") %>
   This is an object representing <%= t(".resource_article", scope: resource) %> <%= t(".resource_name", scope: resource) %> of <%= t(".parent_article", scope: resource) %> <%= t(".parent", scope: resource) %>. <%= t(".parent_plural", scope: resource).capitalize %> can
@@ -20,19 +17,19 @@
 <% end %>
 
 <% unless t(".disable_index", scope: resource) == true %>
-  <%= partial "includes/index_request", locals: { resource: resource, json_all: json_all }  %>
+  <%= partial "includes/index_request", locals: { resource: resource, json_all: json }  %>
 <% end %>
 
 <% unless t(".disable_create", scope: resource) == true %>
-  <%= partial "includes/create_request", locals: { resource_name: resource, json_single: json_single } %>
+  <%= partial "includes/create_request", locals: { resource_name: resource, json_single: json.first  } %>
 <% end %>
 
 <% unless t(".disable_show", scope: resource) == true %>
-  <%= partial "includes/show_request", locals: { resource: resource, json_single: json_single }  %>
+  <%= partial "includes/show_request", locals: { resource: resource, json_single: json.first }  %>
 <% end %>
 
 <% if t('.current', scope: resource) == true %>
-  <%= partial "includes/current_request", locals: { resource: resource, json_single: json_single }  %>
+  <%= partial "includes/current_request", locals: { resource: resource, json_single: json.first }  %>
 <% end %>
 
 <% unless t(".disable_update", scope: resource) == true %>
