--- a/source/includes/_show_request.md.erb
+++ b/source/includes/_show_request.md.erb
@@ -19,9 +19,7 @@ https://api.tradegecko.com/<%= resource_path %>/<%= sample_resource_id %>
 ```
 
 ```json
-{
-  "<%= t(".resource_name", scope: resource) %>": <%= json_single %>
-}
+<%= JSON.pretty_generate(Hash[t(".resource_name", scope: resource), json_single]) %>
 ```
 
 Retrieves the details of an existing <%= t(".resource_name", scope: resource) %>. You need only supply the unique <%= t(".resource_name", scope: resource) %> identifier that was returned upon <%= t(".resource_name", scope: resource) %> creation.
