Switch fonts to AvenirNext

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -64,7 +64,7 @@ under the License.
       <%= partial "includes/footer" %>
     </div>
 
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700' rel='stylesheet' type='text/css'>
+    <link href="https://d3ds1rcygteua7.cloudfront.net/assets/fonts/avenir.css" rel="stylesheet">
     <script>
       window.intercomSettings = {
         app_id: "i0krnes0"
