--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -1,7 +1,6 @@
 @charset "utf-8";
 
-@import url("//fonts.googleapis.com/css?family=Open+Sans:400,600,700");
-@import url("//fonts.googleapis.com/css?family=Raleway:300,500,700");
+@import url("//d3ds1rcygteua7.cloudfront.net/assets/fonts/avenir.css");
 
 @import 'normalize';
 @import 'variables'; //revert to tripit defaults
