Replace Logo and moko

--- a/source/layouts/docs.erb
+++ b/source/layouts/docs.erb
@@ -64,7 +64,7 @@ under the License.
 
     <div class="toc-wrapper">
       <a href="/" title="Back to API documentation">
-        <%= image_tag "logo.png", width: "200px" %>
+        <%= image_tag "qbcommerce-logo.svg", width: "140px" %>
       </a>
       <% if language_tabs.any? %>
         <div class="lang-selector">
