--- a/source/includes/home_cta.erb
+++ b/source/includes/home_cta.erb
@@ -4,11 +4,8 @@
       Build Apps for over 200,000 merchants or just for your own team
     </h1>
     <div class="home-cta_button-wrapper">
-      <a href="https://go.tradegecko.com/register" target="blank_" class="btn btn-big btn-primary" >
-          Sign Up Now
-      </a>
-      <a href="/docs.html" class="btn btn-outline btn-big" >
-          Explore Docs
+      <a href="/docs.html" class="btn btn-big btn-primary" >
+          Explore API Docs
       </a>
     </div>
   </div>
