--- a/source/stylesheets/components/_card-list.scss
+++ b/source/stylesheets/components/_card-list.scss
@@ -9,7 +9,7 @@
 .secondary-card{
   &.study-card {
     background: none;
-    border: solid 1px $gray-3;
+    border: solid 1px $c-gray-3;
     border-radius: 5px;
   }
 
