--- a/source/includes/home_cta.erb
+++ b/source/includes/home_cta.erb
@@ -1,7 +1,7 @@
 <div class="home-cta-container">
   <div class="home-cta-wrapper">
     <h1>
-      Build Apps for over 200,000 merchants or just for your own team
+      Build Apps for over 200,000 merchants, or just for your own team
     </h1>
     <div class="home-cta_button-wrapper">
       <a href="/docs.html" class="btn btn-big btn-primary" >
