--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -65,7 +65,7 @@ home: true
   </div>
 
   <div class="row index-page__section">
-    <h1> Start building with TradeGecko API in minutes...</h1>
+    <h2> Start building with TradeGecko API in minutes</h2>
   </div>
 
   <div class="row">
@@ -90,7 +90,7 @@ home: true
     <div class="col-md-3 become-partner__image">
     </div>
     <div class="col-md-7 become-partner__details">
-      <h1> Sign up for a partner account to get started</h1>
+      <h2> Sign up for a partner account to get started</h2>
       <p>Discover how our Partner Program can help your clients build the business of their dreams and make you money in the process</p>
       <a href="https://partners.tradegecko.com/register" target="blank_" class="btn btn-big btn-primary" >
         Become a partner
