--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -54,11 +54,12 @@
 }
 
 .btn {
+  @extend %base-font;
   display: inline-block;
 }
 
 .index-page__section {
-  margin-top: 100px;
+  margin: 30px 0;
 }
 
 .plain-link {
@@ -67,10 +68,6 @@
 }
 .base__body {
   overflow: visible;
-}
-
-.btn-primary {
-  color: white;
 }
 
 .site-header {
@@ -134,10 +131,6 @@ $border-radius: 3px;
     justify-content: inherit;
     width:100%;
     justify-content: flex-end;
-  }
-
-  .site-header {
-    padding-top: 0;
   }
 
   .site-header {
