--- a/source/stylesheets/components/_feedback-banner.scss
+++ b/source/stylesheets/components/_feedback-banner.scss
@@ -1,19 +1,7 @@
 .feedback-banner {
   margin-top: 50px;
-  background:#1C4561;
-  padding-top:10px;
-  padding-bottom:10px;
+  background: $c-gray-9;
+  padding: 30px 0;
   display: flex;
   justify-content: center;
-  color:white
-}
-
-.feedback-banner > a {
-  margin-left: 10px;
-  background-color: #5784f7;
-  border-color: #5784f7;
-
-  &:hover {
-    background-color: darken(#5784f7, 10%);
-  }
 }
