--- a/source/stylesheets/components/_feedback-banner.scss
+++ b/source/stylesheets/components/_feedback-banner.scss
@@ -2,6 +2,5 @@
   margin-top: 50px;
   background: $c-gray-9;
   padding: 30px 0;
-  display: flex;
-  justify-content: center;
+  text-align: center;
 }
