Remove TradeGecko from Index page

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -1,15 +1,15 @@
 ---
-title: TradeGecko Developer Portal
+title: QuickBooks Commerce Developer Portal
 
 primary_cards:
   - name:  Ecommerce Integration Guide
-    blurb: Build a sales channel integration with TradeGecko. Sync orders and products from your online stores and marketplaces.
+    blurb: Build a sales channel integration with QuickBooks Commerce. Sync orders and products from your online stores and marketplaces.
     url: /guides/sales.html
   - name: Fulfillment Service Integration Guide
-    blurb: Integrate TradeGecko with a fulfilment service to streamline your 3PL management and shipping workflows.
+    blurb: Integrate QuickBooks Commerce with a fulfilment service to streamline your 3PL management and shipping workflows.
     url: /guides/3pl.html
   - name: Warehouse Management Integration Guide
-    blurb: Sync inventory levels between your Warehouse Management System and TradeGecko.
+    blurb: Sync inventory levels between your Warehouse Management System and QuickBooks Commerce.
     url: /guides/warehouse.html
 
 secondary_cards:
@@ -18,11 +18,11 @@ secondary_cards:
     url: /docs.html
     cta: Explore API Docs
   - name: Detailed Guides and Tutorials
-    blurb: TradeGecko’s thorough use cases provide step-by-step instructions to build integrations quickly and easily.
+    blurb: QuickBooks Commerce's thorough use cases provide step-by-step instructions to build integrations quickly and easily.
     url: /docs.html#guides
     cta: Explore guides
   - name: Knowledge and Support
-    blurb: Detailed articles and getting started modules covering all areas of the TradeGecko product.
+    blurb: Detailed articles and getting started modules covering all areas of the QuickBooks Commerce product.
     url: https://support.tradegecko.com
     cta: Learn more
 
@@ -43,7 +43,7 @@ home: true
           <div class="study-blurb">
             <h4><%=study.name%></h4>
             <p><%=study.blurb%></p>
-            <a href="<%=study.url%>" class="btn btn-big btn-primary card__sticky-button" >
+            <a href="<%=study.url%>" class="plain-link card__sticky-button" >
               Read More
             </a>
           </div>
@@ -53,7 +53,7 @@ home: true
   </div>
 
   <div class="row index-page__section">
-    <h2> Start building with TradeGecko API in minutes</h2>
+    <h2> Start building with QuickBooks Commerce API in minutes</h2>
   </div>
 
   <div class="row index-page__section">
@@ -63,7 +63,7 @@ home: true
           <div class="study-blurb">
             <h4 class="study-card__title"><%=study.name%></h4>
             <p><%=study.blurb%></p>
-            <a href="<%= study.url %>" class="plain-link card__sticky-button secondary-card__cta" >
+            <a href="<%= study.url %>" class="plain-link card__sticky-button" >
               <%= study.cta %> <i class="fa fa-angle-right"></i>
             </a>
           </div>
