Add topbar for acquisition announcement

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -54,6 +54,10 @@ under the License.
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
+    <div class="site-topbar">
+      <a class="site-topbar__link" target="_blank" href="https://tradegecko.com/blog/tradegecko/acquired-by-intuit">TradeGecko is now QuickBooks Commerce.</a>
+    </div>
+
     <div class="base">
       <%= partial "includes/header" %>
       <div class="base__body">
