Add acquisition announcement topbar to API docs

--- a/source/layouts/docs.erb
+++ b/source/layouts/docs.erb
@@ -56,6 +56,11 @@ under the License.
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P2LGV7S"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
+    <div class="site-topbar site-topbar__fixed">
+      <a class="site-topbar__link" target="_blank" href="https://tradegecko.com/blog/tradegecko/acquired-by-intuit">TradeGecko is now QuickBooks Commerce.</a>
+    </div>
+
     <a href="#" id="nav-button">
       <span>
         <%= image_tag('navbar-2.png') %>
