--- a/source/stylesheets/_variables2.scss
+++ b/source/stylesheets/_variables2.scss
@@ -83,6 +83,7 @@ $code-annotation-padding: 13px; // padding inside code annotations
 $h1-margin-bottom: 21px; // padding under the largest header tags
 $tablet-width: 930px; // min width before reverting to tablet size
 $phone-width: $tablet-width - $nav-width; // min width before reverting to mobile size
+$top-bar-height: 62px;
 
 
 // FONTS
